--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 MONGO_URL = "mongodb+srv://mahdi:wike123123@cluster0.a0sezpp.mongodb.net/?retryWrites=true&w=majority"
 port = 5000
-JWT_SECRET = secret123
+JWT_SECRET = "secret123"
